<resources>
    <string name="app_name">My Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk!</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="my_metarial_app">Metarial App</string>
    <string name="my_wearable_project">App for Android Wear Device</string>
    <string name="capstone">Capstone Project</string>
</resources>
