<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/button_margins_left_right"
        android:layout_marginRight="@dimen/button_margins_left_right"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/title_text"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/open_popular_movies"
        style="@style/text_button_style"
        android:layout_below="@+id/title_text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="createToast"
        android:text="@string/popular_movies" />

    <TextView
        android:id="@+id/open_stock_hawk"
        style="@style/text_button_style"
        android:layout_below="@+id/open_popular_movies"
        android:onClick="createToast"
        android:text="@string/stock_hawk" />

    <TextView
        android:id="@+id/open_build_it_bigger"
        style="@style/text_button_style"
        android:layout_below="@+id/open_stock_hawk"
        android:onClick="createToast"
        android:text="@string/build_it_bigger" />

    <TextView
        android:id="@+id/open_metarial_app"
        style="@style/text_button_style"
        android:layout_below="@+id/open_build_it_bigger"
        android:onClick="createToast"
        android:text="@string/my_metarial_app" />

    <TextView
        android:id="@+id/open_wearable_app"
        style="@style/text_button_style"
        android:layout_below="@+id/open_metarial_app"
        android:onClick="createToast"
        android:text="@string/my_wearable_project" />

    <TextView
        android:id="@+id/open_capstone_project"
        style="@style/text_button_style"
        android:layout_below="@+id/open_wearable_app"
        android:onClick="createToast"
        android:text="@string/capstone" />
</RelativeLayout>
